2011-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-pcomplete.el (erc-pcomplete-nick-postfix): Remove the " " in the
	suffix that's added by pcomplete-termination-string anyway.
	(pcomplete-erc-setup): Remove pcomplete-suffix-list setting now that
	it's not needed any more.

2011-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-mode-map): Use completion-at-point.
	(erc-mode): Tell completion-at-point to obey erc-complete-functions.
	(erc-complete-word-at-point): New function.
	(erc-complete-word): Make it obsolete.
	* erc-pcomplete.el (erc-pcompletions-at-point): New function.
	(pcomplete): Use it.
	* erc-dcc.el (erc-dcc-chat-mode-map): Use completion-at-point.
	(erc-dcc-chat-mode): Tell completion-at-point to obey
	erc-complete-functions.
	* erc-button.el (erc-button-next-function): New function extracted from
	erc-button-next.
	(button, erc-button-next): Use it.

2011-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.3 released.

2011-03-04  Julien Danjou  <julien@danjou.info>

	* erc-track.el (erc-track-visibility): Fix :type.  (Bug#6369)

2011-02-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-list.el (erc-list-menu-mode-map): Move initialization
	into declaration.

2011-02-07  Julien Danjou  <julien@danjou.info>

	* erc-track.el (erc-window-configuration-change): New function.
	This will allow to track buffer visibility when a command is
	finished to executed.  Idea stolen from rcirc.
	(track): Put erc-window-configuration-change in
	window-configuration-change-hook.
	(erc-modified-channels-update): Remove
	erc-modified-channels-update from post-command-hook after update.

2011-01-31  Antoine Levitt  <antoine.levitt@gmail.com>  (tiny change)

	* erc-track.el (track): Don't reset erc-modified-channels-object
	each time erc-track-mode is activated.

2011-01-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-mode):
	* erc-dcc.el (erc-dcc-chat-mode): Use define-derived-mode.
