@@ -1951,6 +1951,13 @@ See `erc-display-server-message'." nil
     (erc-display-message parsed '(error notice) 'active 's482
                          ?c channel ?m message)))
 
+(define-erc-response-handler (671)
+  "Secure connection response in WHOIS." nil
+  (let ((nick (second (erc-response.command-args parsed)))
+        (securemsg (erc-response.contents parsed)))
+    (erc-display-message parsed 'notice 'active 's671
+                         ?n nick ?a securemsg)))
+
 (define-erc-response-handler (431 445 446 451 462 463 464 481 483 484 485
                                   491 501 502)
   ;; 431 - No nickname given
